fixed tutorial carousel cutoff

--- a/public/stylesheets/tutorialCSS.css
+++ b/public/stylesheets/tutorialCSS.css
@@ -1,12 +1,25 @@
-.carousel-item {
-    height: 500px;
-    width: 200px;
-    padding-top: 100px;
+.col-sm-auto {
+    margin: 0 auto;
+    float: none;
+    padding-bottom: 100px;
 }
 
-.item img {
+img {
+    padding-top: 100px;
+    width: 1100px;
+    height: 500px;
+}
+
+.carousel-control-prev-icon {
     position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
+    left: 20px;
+    top: 60%;
+    transform: translateY(-50%);
+}
+
+.carousel-control-next-icon {
+    position: absolute;
+    right: 20px;
+    top: 60%;
+    transform: translateY(-50%);
 }
